@@ -2656,12 +2656,7 @@ password=P@ssW0rd!
             <tr>
                <td>property</td>
                <td>No</td>
-               <td>Unsupported!</td>
-            </tr>
-            <tr>
-               <td>propertyOnDelete</td>
-               <td>No</td>
-               <td>Unsupported!</td>
+               <td>Set this property if a modification has occurred. For use in conditionally controlling the build later.</td>
             </tr>
             </tbody>
         </table>
@@ -3361,11 +3356,6 @@ password=P@ssW0rd!
                 in conditionally controlling the build later.</td>
             </tr>
             <tr>
-               <td>propertyOnDelete</td>
-               <td>No</td>
-               <td>Unsupported!</td>
-            </tr>
-            <tr>
                <td>username</td>
                <td>No (defaults to "User")</td>
                <td>The username to use for the reported Modifications.</td>
@@ -3540,11 +3530,6 @@ password=P@ssW0rd!
                 <td>No</td>
                 <td>Set this property if a modification has occurred.  For use
                 in conditionally controlling the build later.</td>
-            </tr>
-            <tr>
-               <td>propertyOnDelete</td>
-               <td>No</td>
-               <td>Unsupported!</td>
             </tr>
             </tbody>
         </table>
@@ -4175,14 +4160,10 @@ password=P@ssW0rd!
                 as <code>hhmm</code> format.</td>
             </tr>
             <tr>
-               <td>property</td>
-               <td>No</td>
-               <td>Unsupported!</td>
-            </tr>
-            <tr>
-               <td>propertyOnDelete</td>
-               <td>No</td>
-               <td>Unsupported!</td>
+                <td>property</td>
+                <td>No</td>
+                <td>Set this property if a modification has occurred.  For use
+                in conditionally controlling the build later.</td>
             </tr>
             </tbody>
         </table>
